# unit

./: .gitignore  CHANGES  configure
.github/workflows/: unitctl.yml
auto/: feature  make  otel
cli/: .gitignore  Dockerfile  GNUmakefile  README.md
cli/man/: unitctl.1
cli/unit-client-rs/: Cargo.toml
cli/unit-openapi/: Cargo.toml  README.md
cli/unit-openapi/src/apis/: access_log_api.rs  applications_api.rs  apps_api.rs  certificates_api.rs  client.rs  config_api.rs  configuration.rs  control_api.rs  listeners_api.rs  mod.rs  request.rs  routes_api.rs  settings_api.rs  status_api.rs  tls_api.rs  xff_api.rs
cli/unit-openapi/src/models/: cert_bundle.rs  cert_bundle_chain_cert.rs  cert_bundle_chain_cert_issuer.rs  cert_bundle_chain_cert_subj.rs  cert_bundle_chain_cert_validity.rs  config.rs  config_access_log.rs  config_access_log_object.rs  config_application.rs  config_application_common.rs  config_application_common_isolation.rs  config_application_common_isolation_automount.rs  config_application_common_isolation_cgroup.rs  config_application_common_isolation_gidmap_inner.rs  config_application_common_isolation_namespaces.rs  config_listener.rs  (+49 more)
cli/unitctl/src/: main.rs  unitctl.rs
cli/unitctl/www/: index.html  rapidoc-min.js
docs/: changes.xml
src/: nxt_h1proto.c  nxt_http.h  nxt_http_request.c  nxt_main.c  nxt_main.h  nxt_otel.c  nxt_otel.h  nxt_router.c
src/otel/: Cargo.toml
src/otel/src/: lib.rs
tools/: README.md
tools/cli/: GNUmakefile
tools/cli/unit-openapi/: README.md
tools/unitctl/pkg/: body.md
tools/unitctl/unitctl/: Cargo.toml
(+3 files in other folders)
