[package]
name = "otel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1.13"
opentelemetry = "0.24.0"
opentelemetry_sdk = { version = "0.24.0", features = ["rt-tokio"] }
lazy_static = "1.5.0"
opentelemetry-otlp = { version = "0.17.0", features = ["tonic"] }
tokio = { version = "1", features = ["full"] }
opentelemetry-semantic-conventions = "0.16.0"
tracing = { version = "0.1", default-features = false }
tracing-core = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
